--- a/week_2_pre_class.qmd
+++ b/week_2_pre_class.qmd
@@ -10,6 +10,13 @@ While it takes practice to create professional-level visualizations, the basics 
 
 Today, we'll start by building this intuition. Instead of getting bogged down in syntax, we'll use a point-and-click interface called Esquisse to create increasingly sophisticated visualizations. As we do this, we'll examine the code it generates to understand how ggplot2 builds plots layer by layer.
 
+### Video Lecture
+Watch this video lecture before our interactive session:
+
+::: {.column-page}
+{{< video https://youtu.be/D0CNUBFqY-o >}}
+:::
+
 ## Learning Objectives
 
 By completing this pre-class work, you will:
